# pydian

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  MIGRATION_TO_RUST.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
design/: ideas.md
pydian/: __init__.py  dataframes.py  dicts.py  dio.py  globs.py  mapper.py  partials.py  pipes.py  rules.py  standards.py  types.py  validation.py
pydian/dataframes/: README.md  __init__.py  core.py  ops.py  util.py
pydian/dataframes/dsl/: colnames.peg  colnames.py  from.peg  from_expr.py  group.peg  group.py  select.py
pydian/dicts/: README.md  __init__.py  core.py  dsl.peg  enums.py  globs.py  mapper.py  ops.py  util.py
pydian/dicts/dsl/: get.peg
pydian/io/: README.md  __init__.py  database.py
pydian/lib/: types.py  util.py
pydian/pipelines/: README.md  __init__.py  pipes.py
pydian/standards/: __init__.py  mapping.py
pydian/validation/: README.md  __init__.py  core.py  custom.py  ops.py  pydantic.py  rules.py  specific.py  validate.py
tests/: conftest.py  test_dataframes.py  test_dbio.py  test_dicts.py  test_dio.py  test_mapper.py  test_partials.py  test_pipes.py  test_rules.py  test_validation.py
tests/dataframes/: test_colnames.py  test_core_df.py  test_select.py
tests/dicts/: test_core_dict.py  test_dicts.py  test_mapper.py  test_util.py  test_util_dict.py
tests/io/: test_database.py  test_disk.py
tests/lib/: test_util.py
tests/pipelines/: test_pipes.py
tests/static/: example_str.txt  simple_data.json  simple_data_10.ndjson  simple_database.db  simple_dataframe.csv  simple_dataframe.tsv
tests/validation/: test_core_validation.py  test_rules.py  test_specific.py  test_validate.py  test_validation.py
tests_rust_example/dataframes/: dataframes_tests.rs
tests_rust_example/dicts/: dicts_tests.rs
tests_rust_example/mapper/: mapper_tests.rs
tests_rust_example/validation/: validation_tests.rs
