[tool.poetry]
name = "pydian"
version = "0.3.1"
description = "Library for pythonic data interchange"
authors = ["Eric Pan <eric.pan@stanford.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jmespath = "^1.0.1"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.21.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["pydian"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pandas.*",
]
