[tool.poetry]
name = "pydian"
version = "0.5.0"
description = "Library for pythonic data interchange"
authors = ["Eric Pan <epan64.dev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
result = "^0.17.0"
parsimonious = "^0.10.0"
pydantic = "^2.7.1"
polars = { version = "^0.20.23", optional = true }

[tool.poetry.extras]
dataframes = ["polars"]

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.21.0"
ipykernel = "^6.29.4"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["pydian"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
